[gd_scene load_steps=10 format=3 uid="uid://c3ev5o6ua0dou"]

[ext_resource type="Script" uid="uid://f2kfb374alxr" path="res://scenes/Menu/main_menu.gd" id="1_2slre"]
[ext_resource type="StyleBox" uid="uid://de7p8np7j7h43" path="res://resources/Default_Box.tres" id="1_sw55l"]
[ext_resource type="Theme" uid="uid://06fpobwh5q7a" path="res://scenes/Menu/main_menu_theme.tres" id="2_8mcyk"]
[ext_resource type="Script" uid="uid://cl2mdp8ppvo73" path="res://scenes/Menu/mm_background.gd" id="4_2itis"]
[ext_resource type="Texture2D" uid="uid://dcymw3v6t2x63" path="res://assets/Textures/PlayField/Field_default_v3_no_lines.png" id="4_evs2v"]
[ext_resource type="Resource" uid="uid://ua78q2387d0m" path="res://resources/player_settings_menu.tres" id="5_2itis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akboc"]
size = Vector2(2300, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvd5r"]
size = Vector2(100, 1400)

[sub_resource type="Theme" id="Theme_i6drp"]
GridContainer/constants/h_separation = 50
GridContainer/constants/v_separation = 50

[node name="MainMenu" type="Control" node_paths=PackedStringArray("start_menu", "start_entry_focus", "settings_menu", "settings_entry_focus", "ip_edit_field")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2slre")
start_menu = NodePath("StartMenu")
start_entry_focus = NodePath("StartMenu/VBoxContainer/Start_local")
settings_menu = NodePath("Settings")
settings_entry_focus = NodePath("Settings/Panel/MarginContainer/GridContainer/MasterSlider")
ip_edit_field = NodePath("StartMenu/VBoxContainer/IP_Edit_Field")

[node name="MMBackground" type="Node2D" parent="."]
script = ExtResource("4_2itis")
settings = ExtResource("5_2itis")

[node name="Sprite2D" type="Sprite2D" parent="MMBackground"]
modulate = Color(2, 2, 2, 1)
scale = Vector2(1.34851, 1.34851)
texture = ExtResource("4_evs2v")

[node name="Camera2D" type="Camera2D" parent="MMBackground"]
zoom = Vector2(0.64, 0.64)

[node name="PlaygroundBounds" type="StaticBody2D" parent="MMBackground"]

[node name="TopWall" type="CollisionShape2D" parent="MMBackground/PlaygroundBounds"]
position = Vector2(0, -700)
shape = SubResource("RectangleShape2D_akboc")

[node name="BottomWall" type="CollisionShape2D" parent="MMBackground/PlaygroundBounds"]
position = Vector2(0, 700)
shape = SubResource("RectangleShape2D_akboc")

[node name="LeftWall" type="CollisionShape2D" parent="MMBackground/PlaygroundBounds"]
position = Vector2(-1200, 0)
shape = SubResource("RectangleShape2D_xvd5r")

[node name="RightWall" type="CollisionShape2D" parent="MMBackground/PlaygroundBounds"]
position = Vector2(1200, 0)
shape = SubResource("RectangleShape2D_xvd5r")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start_local" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Host_online")
theme = ExtResource("2_8mcyk")
text = "Play Local"

[node name="Host_online" type="Button" parent="StartMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
focus_neighbor_top = NodePath("../Start_local")
focus_neighbor_bottom = NodePath("../Join_online")
theme = ExtResource("2_8mcyk")
text = "Host game"

[node name="Join_online" type="Button" parent="StartMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
focus_neighbor_top = NodePath("../Host_online")
focus_neighbor_bottom = NodePath("../Settings")
theme = ExtResource("2_8mcyk")
text = "Join Online game"

[node name="IP_Edit_Field" type="TextEdit" parent="StartMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "79.241.92.24"

[node name="Join_local" type="Button" parent="StartMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
focus_neighbor_top = NodePath("../Host_online")
focus_neighbor_bottom = NodePath("../Settings")
theme = ExtResource("2_8mcyk")
text = "Join Localhost"

[node name="Settings" type="Button" parent="StartMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
focus_neighbor_top = NodePath("../Join_online")
focus_neighbor_bottom = NodePath("../Quit")
theme = ExtResource("2_8mcyk")
text = "Settings"

[node name="Quit" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Settings")
theme = ExtResource("2_8mcyk")
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="StartMenu"]
visible = false
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="StartMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Info:"
horizontal_alignment = 1

[node name="MessageInfo" type="Label" parent="StartMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Connection to Lobby lost!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="StartMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Okay"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 100.0
offset_right = -200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_sw55l")

[node name="SettingsHeader" type="Label" parent="Settings/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 47.0
offset_right = 31.0
offset_bottom = 70.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Settings/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="Settings/Panel/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_i6drp")
columns = 2

[node name="MasterVolume" type="Label" parent="Settings/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Settings/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXVolume" type="Label" parent="Settings/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Settings/Panel/MarginContainer/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolume" type="Label" parent="Settings/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Settings/Panel/MarginContainer/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Settings/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="StartMenu/VBoxContainer/Start_local" to="." method="_on_start_local_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Host_online" to="." method="_on_host_online_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Join_online" to="." method="_on_join_online_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Join_local" to="." method="_on_join_local_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/Panel/CloseButton" to="." method="settings_close"]
